Add Report class

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -148,11 +148,15 @@ table#report_list .report_date {
 }
 
 table#report_list .report_title {
-    width: 37%;
+    width: 20%;
 }
 
 table#report_list .report_action {
-    width: 13%;
+    width: 20%;
+}
+
+table#report_list .report_status {
+    width: 20%;
 }
 
 pre {
